--- a/web/react-backoffice/index.html
+++ b/web/react-backoffice/index.html
@@ -3,11 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>E-KYC TKSK</title>
+    <title>E-KYC Backoffice</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/app/main.tsx"></script>
   </body>
   </html>
-
